js/js.translator/testData/incremental/invalidation/localObjectsLeakThroughInterface/lib1/interface.4.kt
interface Interface {
    konst extraNumber get() = 2

    fun getNumber() = 0

    fun getOtherNumber() = 1

    konst otherExtraNumber get() = 1
}
